--- a/Projects/MoGo/index.html
+++ b/Projects/MoGo/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@500;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -36,7 +36,7 @@
   <body>
     <!-- NAV BAR -->
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">MoGo</a>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -77,6 +77,70 @@
               WELCOME <br />
               TO MOGO
             </h1>
+          </div>
+        </div>
+
+        <div class="row d-flex justify-content-center">
+          <!-- divider hr -->
+          <div class="line"></div>
+          <div class="other-link">
+            <a href="#">learn more</a>
+          </div>
+        </div>
+
+        <div class="row banner-bottom mt-5">
+          <div class="col">
+            <div class="progress">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                style="width: 25%"
+                aria-valuenow="25"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              ></div>
+            </div>
+            <h6>01</h6>
+            <span>INTRO</span>
+          </div>
+          <div class="col">
+            <div class="progress">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="0"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              ></div>
+            </div>
+            <h6>02</h6>
+            <span>WORK</span>
+          </div>
+          <div class="col">
+            <div class="progress">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="0"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              ></div>
+            </div>
+            <h6>03</h6>
+            <span>ABOUT</span>
+          </div>
+          <div class="col">
+            <div class="progress">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="0"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              ></div>
+            </div>
+            <h6>04</h6>
+            <span>CONTACTS</span>
           </div>
         </div>
       </div>
