--- a/Projects/MoGo/index.html
+++ b/Projects/MoGo/index.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,400;0,600;0,700;1,500&family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -88,7 +89,7 @@
           </div>
         </div>
 
-        <div class="row banner-bottom mt-5">
+        <div class="row banner-bottom">
           <div class="col">
             <div class="progress">
               <div
@@ -142,6 +143,380 @@
             <h6>04</h6>
             <span>CONTACTS</span>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="about">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12">
+            <h2 class="section-title1">What we do</h2>
+            <h1 class="section-title2">STORY ABOUT US</h1>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="section-divider"></div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+          <div class="col-12 images">
+            <div class="row">
+              <div class="col d-flex justify-content-center">
+                <div class="image-container">
+                  <img src="./assets/Layer 44.png" alt="" />
+                </div>
+              </div>
+              <div class="col d-flex justify-content-center">
+                <div class="image-container">
+                  <img src="./assets/Layer 39.png" alt="" />
+                </div>
+              </div>
+              <div class="col d-flex justify-content-center">
+                <div class="image-container">
+                  <img src="./assets/Layer 41.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="facts">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>42</h1>
+            <h6>WEB DESIGN PROJECT</h6>
+          </div>
+          <div class="col">
+            <h1>123</h1>
+            <h6>HAPPY CLIENT</h6>
+          </div>
+          <div class="col">
+            <h1>15</h1>
+            <h6>AWARD WINNER</h6>
+          </div>
+          <div class="col">
+            <h1>99</h1>
+            <h6>CUP OF COFFEE</h6>
+          </div>
+          <div class="col">
+            <h1>24</h1>
+            <h6>MEMBERS</h6>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="service">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="section-title1">We work with</h2>
+            <h1 class="section-title2">AMAZING SERVICES</h1>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="section-divider"></div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="row">
+              <div class="col services">
+                <div class="row">
+                  <div class="col-2">
+                    <img src="./assets/ALARM.png" alt="" />
+                  </div>
+                  <div class="col-10">
+                    <h6>PHOTOGRAPHY</h6>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col services">
+                <div class="row">
+                  <div class="col-2">
+                    <img src="./assets/LINE GRAPH.png" alt="" />
+                  </div>
+                  <div class="col-10">
+                    <h6>WEB DESIGN</h6>
+                    <p>
+                      Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                      eiusmod tempor.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col services">
+                <div class="row">
+                  <div class="col-2">
+                    <img src="./assets/COMPUTER _ OK.png" alt="" />
+                  </div>
+                  <div class="col-10">
+                    <h6>CREATIVITY</h6>
+                    <p>
+                      Dolor sit amet, consectetur adipiscing elit, sed do
+                      eiusmod tempor.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="col-12">
+            <div class="row">
+              <div class="col services">
+                <div class="row">
+                  <div class="col-2">
+                    <img src="./assets/BOOK 2.png" alt="" />
+                  </div>
+                  <div class="col-10">
+                    <h6>SEO</h6>
+                    <p>
+                      Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                      eiusmod.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col services">
+                <div class="row">
+                  <div class="col-2">
+                    <img src="./assets/HOME.png" alt="" />
+                  </div>
+                  <div class="col-10">
+                    <h6>CSS/HTML</h6>
+                    <p>
+                      Lorem dolor sit amet, consectetur adipiscing elit, sed do
+                      tempor.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col services">
+                <div class="row">
+                  <div class="col-2">
+                    <img src="./assets/Digital.png" alt="" />
+                  </div>
+                  <div class="col-10">
+                    <h6>DIGITAL</h6>
+                    <p>
+                      Sit amet, consectetur adipiscing elit, sed do eiusmod
+                      tempor.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="feature">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="section-title1">For all devices</h2>
+            <h1 class="section-title2">UNIQUE DESIGN</h1>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="section-divider"></div>
+            </div>
+          </div>
+          <div class="col-12 d-flex justify-content-center">
+            <img src="./assets/display bg 768x1024.png" alt="" />
+            <img src="./assets/phone.png" alt="" class="phone" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="service-2">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="section-title1">Service</h2>
+            <h1 class="section-title2">WHAT WE DO</h1>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="section-divider"></div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+          <div class="col-12">
+            <div class="row">
+              <div class="col image">
+                <img src="./assets/service2.png" alt="" />
+              </div>
+              <div class="col">
+                <div class="accordion" id="accordionExample">
+                  <!-- accordions -->
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                      <button
+                        class="accordion-button"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne"
+                        aria-expanded="false"
+                        aria-controls="collapseOne"
+                      >
+                        <img src="./assets/PICTURE.png" class="me-3" />
+                        <span> PHOTOGRAPHY </span>
+                      </button>
+                    </h2>
+                    <div
+                      id="collapseOne"
+                      class="accordion-collapse collapse show"
+                      aria-labelledby="headingOne"
+                      data-bs-parent="#accordionExample"
+                    >
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea
+                        commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo"
+                        aria-expanded="false"
+                        aria-controls="collapseTwo"
+                      >
+                        <img src="./assets/EQUALIZER.png" class="me-3" />
+                        <span> CREATIVITY </span>
+                      </button>
+                    </h2>
+                    <div
+                      id="collapseTwo"
+                      class="accordion-collapse collapse"
+                      aria-labelledby="headingTwo"
+                      data-bs-parent="#accordionExample"
+                    >
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea
+                        commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree"
+                        aria-expanded="false"
+                        aria-controls="collapseThree"
+                      >
+                        <img src="./assets/BULLSEYE.png" class="me-3" />
+                        <span> WEB DESIGN </span>
+                      </button>
+                    </h2>
+                    <div
+                      id="collapseThree"
+                      class="accordion-collapse collapse"
+                      aria-labelledby="headingThree"
+                      data-bs-parent="#accordionExample"
+                    >
+                      <div class="accordion-body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud
+                        exercitation ullamco laboris nisi ut aliquip ex ea
+                        commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="qoute">
+      <div class="container">
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <div
+                  class="col-3 d-flex justify-content-center align-items-center"
+                >
+                  <img src="./assets/SPEECH 4.png" alt="" />
+                </div>
+                <div class="col-9">
+                  <p>
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. ut enim ad minim veniam, quis nostrud exercitation.”
+                  </p>
+                  <p>
+                    <span>- John Doe</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
     </section>
