--- a/Projects/MoGo/index.html
+++ b/Projects/MoGo/index.html
@@ -348,8 +348,8 @@
               <div class="section-divider"></div>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
@@ -492,9 +492,30 @@
                     sed do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. ut enim ad minim veniam, quis nostrud exercitation.”
                   </p>
+                  <div class="d-flex align-items-center gap-3 lh-1">
+                    <div class="dash"></div>
+                    <h4>John Doe</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div
+                  class="col-3 d-flex justify-content-center align-items-center"
+                >
+                  <img src="./assets/SPEECH 4.png" alt="" />
+                </div>
+                <div class="col-9">
                   <p>
-                    <span>- John Doe</span>
+                    “lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. ut enim ad minim veniam, quis nostrud exercitation.”
                   </p>
+                  <div class="d-flex align-items-center gap-3 lh-1">
+                    <div class="dash"></div>
+                    <h4>john doe</h4>
+                  </div>
                 </div>
               </div>
             </div>
@@ -517,6 +538,126 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
+        </div>
+      </div>
+    </section>
+
+    <section id="team">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="section-title1">Who are we</h2>
+            <h1 class="section-title2">MEET OUR TEAM</h1>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="section-divider"></div>
+            </div>
+            <p>
+              lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+          <div class="col-12 images">
+            <div class="row">
+              <div class="col">
+                <div class="image">
+                  <img class="pic-1" src="./assets/Layer 16.png" alt="" />
+                </div>
+                <h5>MATTHEW DIX</h5>
+                <span>Graphics Design</span>
+              </div>
+              <div class="col">
+                <div class="image">
+                  <img class="pic-2" src="./assets/Layer 19.png" alt="" />
+                </div>
+                <h5>Christopher Campbell</h5>
+                <span>Branding/UX design</span>
+              </div>
+              <div class="col">
+                <div class="image">
+                  <img class="pic-3" src="./assets/Layer 18.png" alt="" />
+                </div>
+                <h5>Michael Fertig</h5>
+                <span>Developer</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="logos">
+      <div class="container">
+        <div class="col-12 d-flex justify-content-center">
+          <img src="./assets/logos.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section id="work">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="section-title1">What we do</h2>
+            <h1 class="section-title2">SOME OF OUR WORK</h1>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="section-divider"></div>
+            </div>
+            <p>
+              lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </div>
+
+          <div class="col-12">
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col padding-0 left-images">
+                    <img class="left-image1" src="./assets/work6.png" alt="" />
+                  </div>
+                  <div class="col padding-0 left-images">
+                    <img class="left-image2" src="./assets/work5.png" alt="" />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col padding-0 left-images">
+                    <img class="left-image3" src="./assets/work4.png" alt="" />
+                  </div>
+                  <div class="col padding-0 left-images">
+                    <img class="left-image4" src="./assets/work7.png" alt="" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="col">
+                <div class="row">
+                  <div class="col padding-0 right-images right-image-1">
+                    <img src="./assets/work3.png" alt="" />
+                  </div>
+                  <div class="col">
+                    <div class="row">
+                      <div class="col padding-0 right-images right-image-2">
+                        <img src="./assets/work2.png" alt="" />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col padding-0 right-images right-image-2">
+                        <img
+                          class="right-image-3"
+                          src="./assets/work1.png"
+                          alt=""
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
