--- a/Projects/MoGo/index.html
+++ b/Projects/MoGo/index.html
@@ -611,53 +611,125 @@
               nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>
-
-          <div class="col-12">
-            <div class="row">
-              <div class="col">
-                <div class="row">
-                  <div class="col padding-0 left-images">
-                    <img class="left-image1" src="./assets/work6.png" alt="" />
-                  </div>
-                  <div class="col padding-0 left-images">
-                    <img class="left-image2" src="./assets/work5.png" alt="" />
-                  </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col">
+              <div class="row">
+                <div class="col padding-0 left-images">
+                  <img class="left-image1" src="./assets/work6.png" alt="" />
                 </div>
-                <div class="row">
-                  <div class="col padding-0 left-images">
-                    <img class="left-image3" src="./assets/work4.png" alt="" />
-                  </div>
-                  <div class="col padding-0 left-images">
-                    <img class="left-image4" src="./assets/work7.png" alt="" />
-                  </div>
+                <div class="col padding-0 left-images">
+                  <img class="left-image2" src="./assets/work5.png" alt="" />
                 </div>
               </div>
+              <div class="row">
+                <div class="col padding-0 left-images">
+                  <img class="left-image3" src="./assets/work4.png" alt="" />
+                </div>
+                <div class="col padding-0 left-images">
+                  <img class="left-image4" src="./assets/work7.png" alt="" />
+                </div>
+              </div>
+            </div>
 
-              <div class="col">
-                <div class="row">
-                  <div class="col padding-0 right-images right-image-1">
-                    <img src="./assets/work3.png" alt="" />
-                  </div>
-                  <div class="col">
-                    <div class="row">
-                      <div class="col padding-0 right-images right-image-2">
-                        <img src="./assets/work2.png" alt="" />
-                      </div>
+            <div class="col">
+              <div class="row">
+                <div class="col padding-0 right-images right-image-1">
+                  <img src="./assets/work3.png" alt="" />
+                </div>
+                <div class="col">
+                  <div class="row">
+                    <div class="col padding-0 right-images right-image-2">
+                      <img src="./assets/work2.png" alt="" />
                     </div>
-                    <div class="row">
-                      <div class="col padding-0 right-images right-image-2">
-                        <img
-                          class="right-image-3"
-                          src="./assets/work1.png"
-                          alt=""
-                        />
-                      </div>
+                  </div>
+                  <div class="row">
+                    <div class="col padding-0 right-images right-image-2">
+                      <img
+                        class="right-image-3"
+                        src="./assets/work1.png"
+                        alt=""
+                      />
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="testimonial">
+      <div class="container">
+        <div
+          id="carouselExampleControls2"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <div
+                  class="profile col-3 d-flex justify-content-center align-items-center"
+                >
+                  <img src="./assets/testimonial.png" alt="" />
+                </div>
+                <div class="col-9">
+                  <p>
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. ut enim ad minim veniam, quis nostrud exercitation.”
+                  </p>
+                  <div class="d-flex align-items-center gap-3 lh-1">
+                    <div class="dash"></div>
+                    <h4>John Doe</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div
+                  class="profile col-3 d-flex justify-content-center align-items-center"
+                >
+                  <img src="./assets/testimonial.png" alt="" />
+                </div>
+                <div class="col-9">
+                  <p>
+                    “Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. ut enim ad minim veniam, quis nostrud exercitation.”
+                  </p>
+                  <div class="d-flex align-items-center gap-3 lh-1">
+                    <div class="dash"></div>
+                    <h4>John Doe</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls2"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls2"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
     </section>
