--- a/Projects/MoGo/index.html
+++ b/Projects/MoGo/index.html
@@ -613,46 +613,49 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="row">
-            <div class="col">
-              <div class="row">
-                <div class="col padding-0 left-images">
-                  <img class="left-image1" src="./assets/work6.png" alt="" />
-                </div>
-                <div class="col padding-0 left-images">
-                  <img class="left-image2" src="./assets/work5.png" alt="" />
-                </div>
-              </div>
-              <div class="row">
-                <div class="col padding-0 left-images">
-                  <img class="left-image3" src="./assets/work4.png" alt="" />
-                </div>
-                <div class="col padding-0 left-images">
-                  <img class="left-image4" src="./assets/work7.png" alt="" />
-                </div>
-              </div>
-            </div>
 
-            <div class="col">
-              <div class="row">
-                <div class="col padding-0 right-images right-image-1">
-                  <img src="./assets/work3.png" alt="" />
-                </div>
-                <div class="col">
-                  <div class="row">
-                    <div class="col padding-0 right-images right-image-2">
-                      <img src="./assets/work2.png" alt="" />
-                    </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <div class="row">
+              <div class="col">
+                <div class="row">
+                  <div class="col padding-0 left-images">
+                    <img class="left-image1" src="./assets/work6.png" alt="" />
                   </div>
-                  <div class="row">
-                    <div class="col padding-0 right-images right-image-2">
-                      <img
-                        class="right-image-3"
-                        src="./assets/work1.png"
-                        alt=""
-                      />
+                  <div class="col padding-0 left-images">
+                    <img class="left-image2" src="./assets/work5.png" alt="" />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col padding-0 left-images">
+                    <img class="left-image3" src="./assets/work4.png" alt="" />
+                  </div>
+                  <div class="col padding-0 left-images">
+                    <img class="left-image4" src="./assets/work7.png" alt="" />
+                  </div>
+                </div>
+              </div>
+
+              <div class="col">
+                <div class="row">
+                  <div class="col padding-0 right-images right-image-1">
+                    <img src="./assets/work3.png" alt="" />
+                  </div>
+                  <div class="col">
+                    <div class="row">
+                      <div class="col padding-0 right-images right-image-2">
+                        <img src="./assets/work2.png" alt="" />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col padding-0 right-images right-image-2">
+                        <img
+                          class="right-image-3"
+                          src="./assets/work1.png"
+                          alt=""
+                        />
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -672,7 +675,7 @@
         >
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="row">
+              <div class="row d-flex justify-content-center">
                 <div
                   class="profile col-3 d-flex justify-content-center align-items-center"
                 >
@@ -692,7 +695,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="row">
+              <div class="row d-flex justify-content-center">
                 <div
                   class="profile col-3 d-flex justify-content-center align-items-center"
                 >
