--- a/Projects/MoGo/index.html
+++ b/Projects/MoGo/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,400;0,600;0,700;1,500&family=Roboto:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,500&family=Roboto:wght@300;400&display=swap"
       rel="stylesheet"
     />
 
@@ -736,5 +736,280 @@
         </div>
       </div>
     </section>
+
+    <section id="people">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="section-title1">Happy Clients</h2>
+            <h1 class="section-title2">WHAT PEOPLE SAY</h1>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="section-divider"></div>
+            </div>
+          </div>
+          <div class="col-12 mt-5">
+            <div class="row clients gx-5 gy-5">
+              <div class="col-6">
+                <div class="row">
+                  <div class="col-3">
+                    <div class="avatar">
+                      <img class="client-1" src="./assets/avatar4.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="col-9 ps-4">
+                    <h5>MATTHEW DIX</h5>
+                    <span>Graphic Design</span>
+                    <div class="dash"></div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua. Ut enim ad minim.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="row">
+                  <div class="col-3">
+                    <div class="avatar">
+                      <img class="client-2" src="./assets/avatar3.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="col-9 ps-4">
+                    <h5>NICK KARVOUNIS</h5>
+                    <span>Graphic Design</span>
+                    <div class="dash"></div>
+                    <p>
+                      Sit amet, consectetur adipiscing elit, sed do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua. Ut
+                      enim ad minim veniam
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="row">
+                  <div class="col-3">
+                    <div class="avatar">
+                      <img class="client-3" src="./assets/avatar2.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="col-9 ps-4">
+                    <h5>JAELYNN CASTILLO</h5>
+                    <span>Graphic Design</span>
+                    <div class="dash"></div>
+                    <p>
+                      Sit amet, consectetur adipiscing elit, sed do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua. Ut
+                      enim ad minim veniam
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="row">
+                  <div class="col-3">
+                    <div class="avatar">
+                      <img class="client-4" src="./assets/avatar1.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="col-9 ps-4">
+                    <h5>MIKE PETRUCCI</h5>
+                    <span>Graphic Design</span>
+                    <div class="dash"></div>
+                    <p>
+                      Sit amet, consectetur adipiscing elit, sed do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua. Ut
+                      enim ad minim veniam
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="blog">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <h2 class="section-title1">Our stories</h2>
+            <h1 class="section-title2">LATEST BLOG</h1>
+            <div class="col-12 d-flex justify-content-center">
+              <div class="section-divider"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col main-col">
+            <div class="box">
+              <h4>15</h4>
+              <span>Jan</span>
+            </div>
+            <div class="image-story">
+              <img class="image-1" src="./assets/blog3.png" alt="" />
+            </div>
+            <h5>LOREM IPSUM SIT AMET</h5>
+            <p>
+              Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore.
+            </p>
+            <hr />
+            <div class="icons d-flex">
+              <i class="bi bi-eye-fill me-1"></i>
+              <span class="me-3">542</span>
+              <i class="bi bi-chat-dots-fill me-1"></i>
+              <span>17</span>
+            </div>
+          </div>
+          <div class="col main-col">
+            <div class="box">
+              <h4>14</h4>
+              <span>Jan</span>
+            </div>
+            <div class="image-story">
+              <img class="image-2" src="./assets/blog2.png" alt="" />
+            </div>
+            <h5>SED DO EIUSMOD TEMPOR</h5>
+            <p>
+              Adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.
+            </p>
+            <hr />
+            <div class="icons d-flex">
+              <i class="bi bi-eye-fill me-1"></i>
+              <span class="me-3">992</span>
+              <i class="bi bi-chat-dots-fill me-1"></i>
+              <span>42</span>
+            </div>
+          </div>
+          <div class="col main-col">
+            <div class="box">
+              <h4>12</h4>
+              <span>Jan</span>
+            </div>
+            <div class="image-story">
+              <img class="image-3" src="./assets/blog1.png" alt="" />
+            </div>
+            <h5>INCIDIDUNT UT LABORE ET DOLORE</h5>
+            <p>
+              Elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua.
+            </p>
+            <hr />
+            <div class="icons d-flex">
+              <i class="bi bi-eye-fill me-1"></i>
+              <span class="me-3">1560</span>
+              <i class="bi bi-chat-dots-fill me-1"></i>
+              <span>98</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="map">
+      <div class="container-fluid">
+        <div class="col-12 text-center">
+          <i class="bi bi-geo-alt-fill"></i>
+          <h1 class="section-title2">OPEN MAP</h1>
+          <div class="col-12 d-flex justify-content-center">
+            <div class="section-divider"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>MoGo</h1>
+            <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <div class="followers">
+              <span>15K</span>
+              followers
+            </div>
+            <hr />
+            <div class="social mb-4">
+              <span>Follow Us:</span>
+              <i class="bi bi-facebook"></i>
+              <i class="bi bi-twitter"></i>
+              <i class="bi bi-instagram"></i>
+              <i class="bi bi-pinterest"></i>
+              <i class="bi bi-google"></i>
+              <i class="bi bi-youtube"></i>
+            </div>
+            <div class="input-group">
+              <input
+                type="text"
+                placeholder="Your Email..."
+                class="form-control"
+                id="inputGroupFile04"
+                aria-describedby="inputGroupFileAddon04"
+                aria-label="Upload"
+              />
+              <button class="btn" type="button" id="inputGroupFileAddon04">
+                SUBSCRIBE
+              </button>
+            </div>
+          </div>
+          <div class="col blogs">
+            <h6 class="mb-5">BLOGS</h6>
+            <div class="row gy-4">
+              <div class="col-12">
+                <div class="row">
+                  <div class="col d-flex justify-content-center">
+                    <div class="blogs-image">
+                      <img src="./assets/blogs3.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="col">
+                    <h6>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</h6>
+                    <span>Jan 09, 2016</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="row">
+                  <div class="col d-flex justify-content-center">
+                    <div class="blogs-image">
+                      <img src="./assets/blogs2.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="col">
+                    <h6>CONSECTETUR ADIPISCING ELIT, SED DO EIUSMOD TEMPOR</h6>
+                    <span>Jan 09, 2016</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="row">
+                  <div class="col d-flex justify-content-center">
+                    <div class="blogs-image">
+                      <img src="./assets/blogs1.png" alt="" />
+                    </div>
+                  </div>
+                  <div class="col">
+                    <h6>SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE</h6>
+                    <span>Jan 09, 2016</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col insta">
+            <h6>INSTAGRAM</h6>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
