--- a/Projects/MoGo/index.html
+++ b/Projects/MoGo/index.html
@@ -924,8 +924,8 @@
 
     <footer>
       <div class="container">
-        <div class="row">
-          <div class="col">
+        <div class="row gx-5 pb-5">
+          <div class="col mogo">
             <h1>MoGo</h1>
             <p class="mb-5">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -1006,7 +1006,46 @@
             </div>
           </div>
           <div class="col insta">
-            <h6>INSTAGRAM</h6>
+            <h6 class="mb-5">INSTAGRAM</h6>
+            <div class="row gy-1">
+              <div class="col-4 padding-0 insta-image">
+                <img src="./assets/insta9.png" alt="" />
+              </div>
+              <div class="col-4 padding-0 insta-image">
+                <img src="./assets/insta10.png" alt="" />
+              </div>
+              <div class="col-4 padding-0 insta-image">
+                <img src="./assets/insta8.png" alt="" />
+              </div>
+
+              <div class="col-4 padding-0 insta-image">
+                <img src="./assets/insta7.png" alt="" />
+              </div>
+              <div class="col-4 padding-0 insta-image">
+                <img src="./assets/insta6.png" alt="" />
+              </div>
+              <div class="col-4 padding-0 insta-image">
+                <img src="./assets/insta5.png" alt="" />
+              </div>
+
+              <div class="col-4 padding-0 insta-image">
+                <img src="./assets/insta3.png" alt="" />
+              </div>
+              <div class="col-4 padding-0 insta-image">
+                <img src="./assets/insta2.png" alt="" />
+              </div>
+              <div class="col-4 padding-0 insta-image">
+                <img src="./assets/insta1.png" alt="" />
+              </div>
+              <div class="col-4"></div>
+            </div>
+            <h5 class="view-more">View more photos</h5>
+          </div>
+        </div>
+        <hr />
+        <div class="row credit">
+          <div class="col-12 text-center">
+            <p>© 2016 MoGo free PSD template by <span>Laaqiq</span></p>
           </div>
         </div>
       </div>
