--- a/Projects/Mogo2/index.html
+++ b/Projects/Mogo2/index.html
@@ -53,6 +53,29 @@
     <header>
       <h1>MoGo</h1>
       <i class="bi bi-list"></i>
+      <ul>
+        <li>
+          <a href="#">ABOUT</a>
+        </li>
+        <li>
+          <a href="#">SERVICES</a>
+        </li>
+        <li>
+          <a href="#">TEAM</a>
+        </li>
+        <li>
+          <a href="#">WORK</a>
+        </li>
+        <li>
+          <a href="#">BLOG</a>
+        </li>
+        <li>
+          <i class="bi bi-cart-fill"></i>
+        </li>
+        <li>
+          <i class="bi bi-search"></i>
+        </li>
+      </ul>
     </header>
 
     <!-- ================ BANNER ================ -->
