--- a/Projects/Mogo2/index.html
+++ b/Projects/Mogo2/index.html
@@ -230,6 +230,7 @@
       <span class="divider"></span>
       <div class="image-container">
         <img src="./assets/unique-design/img-1.png" alt="" />
+        <img src="./assets/unique-design/img-2.png" alt="" />
       </div>
     </div>
 
