--- a/Projects/Mogo2/index.html
+++ b/Projects/Mogo2/index.html
@@ -51,31 +51,33 @@
 
   <body>
     <header>
-      <h1>MoGo</h1>
-      <i class="bi bi-list"></i>
-      <ul>
-        <li>
-          <a href="#">ABOUT</a>
-        </li>
-        <li>
-          <a href="#">SERVICES</a>
-        </li>
-        <li>
-          <a href="#">TEAM</a>
-        </li>
-        <li>
-          <a href="#">WORK</a>
-        </li>
-        <li>
-          <a href="#">BLOG</a>
-        </li>
-        <li>
-          <i class="bi bi-cart-fill"></i>
-        </li>
-        <li>
-          <i class="bi bi-search"></i>
-        </li>
-      </ul>
+      <div class="header-container">
+        <h1>MoGo</h1>
+        <i class="bi bi-list"></i>
+        <ul>
+          <li>
+            <a href="#">ABOUT</a>
+          </li>
+          <li>
+            <a href="#">SERVICES</a>
+          </li>
+          <li>
+            <a href="#">TEAM</a>
+          </li>
+          <li>
+            <a href="#">WORK</a>
+          </li>
+          <li>
+            <a href="#">BLOG</a>
+          </li>
+          <li>
+            <i class="bi bi-cart-fill"></i>
+          </li>
+          <li>
+            <i class="bi bi-search"></i>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <!-- ================ BANNER ================ -->
@@ -787,9 +789,9 @@
         </div>
       </div>
     </footer>
-    <div class="credit">
+    <section class="credit">
       <hr />
       <p>Copyright © 2021. All Rights Reserved.</p>
-    </div>
+    </section>
   </body>
 </html>
